fixed heading (h1, h2) font-size and board-header gap

--- a/index/board/board.responsive.css
+++ b/index/board/board.responsive.css
@@ -60,7 +60,7 @@
         --rows: 1;
     }
     #board-header {
-        gap: 10px;
+        gap: 30px;
     }
     #board-wrapper {
         gap: 10px;
